Work towards enabling the testsuite

--- a/package.yml
+++ b/package.yml
@@ -13,16 +13,19 @@ replaces   :
     - livestreamer
 builddeps  :
     - python3-pycryptodome
+    - python-freezegun # check
     - python-isodate
     - python-lxml
     - python-mock
     - python-pycountry
     - python-pysocks
-    - python-pytest
-    - python-requests-mock
-    - python-recommonmark
-    - python-sphinx
+    - python-pytest-asyncio # check
+    - python-pytest-mock # check
+    - python-requests # check
+    - python-requests-mock # check
     - python-tomli
+    - python-trio-websocket
+    - python-typing-extensions
     - python-websocket-client
 rundeps    :
     - ffmpeg
@@ -42,5 +45,7 @@ build      : |
     python3 -m pip install --user versioningit
     python3 -m pip wheel --no-deps .
 install    : |
-    unset PYTHONUSERBASE
     python3 -m pip install --root=%installroot% --no-deps *.whl
+#check      : |
+#    Most of tests/webbrowser/ failing
+#    %python3_test pytest3
